<resources>
    <string name="app_name">BookManagerKotlin</string>
    <string name="txtUser">User</string>
    <string name="txt_the_loai">The Loai</string>
    <string name="txt_sach">Sach</string>
    <string name="txt_hoa_don">Hoa Don</string>
    <string name="txt_thong_ke">Thong Ke</string>

    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>

</resources>
