<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d1d0d0"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toobar_menu"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#7400B2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btnUser"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/actionBarItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/emthree" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:background="#969696" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txtUser"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btnTheLoai"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/cateicon" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:background="#969696" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_the_loai"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <!---->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?android:attr/actionBarItemBackground"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:id="@+id/btnBook"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/actionBarItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/bookicon" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:background="#969696" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_sach"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/btnBill"
                android:layout_width="0dp"
                android:layout_height="128dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:foreground="?android:attr/actionBarItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:src="@drawable/hdicon" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="8dp"
                        android:background="#969696" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/txt_hoa_don"
                        android:textStyle="bold" />

                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/btnThongKe"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:foreground="?actionBarItemBackground">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/money_icon" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="#969696" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/txt_thong_ke"
                    android:textStyle="bold" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>